--- a/src/app/modules/authentication/components/sign-up/sign-up.component.html
+++ b/src/app/modules/authentication/components/sign-up/sign-up.component.html
@@ -1,9 +1,10 @@
-<div class="login-form-container">
-  <div class="login-form-info">
-    <p class="mat-title login-form__title">Log in</p>
+<div class="sign-up-form-container">
+  <div class="sign-up-form-info">
+    <p class="mat-title sing-up-form__title">Sign up</p>
   </div>
-  <form [formGroup]="loginForm" class="login-form" (ngSubmit)="onSubmit()">
-    <mat-form-field class="login-form-field__name">
+
+  <form [formGroup]="singUpForm" class="sign-up-form" (ngSubmit)="onSubmit()">
+    <mat-form-field class="sign-up-form-field__name">
       <input type="email" matInput placeholder="Email" formControlName="email">
       <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
         <mat-error *ngIf="email.hasError('required')">
@@ -15,7 +16,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field class="login-form-field__password">
+    <mat-form-field class="sign-up-form-field__password">
       <input [type]=typeOfInput matInput placeholder="Password" formControlName="password">
       <mat-icon matSuffix (click)="handleVisibility()">{{prefixIcon}}</mat-icon>
       <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
@@ -25,11 +26,17 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-checkbox class="login-form__checkbox">Remember me</mat-checkbox>
+    <mat-form-field class="sign-up-form-field__confirm-password">
+      <input [type]=typeOfInput matInput placeholder="Confirm password" formControlName="confirmPassword">
+      <mat-error *ngIf="confirmPassword.invalid && (password.dirty || password.touched)">
+        <mat-error *ngIf="confirmPassword.hasError('required')">
+          Confirm password is <strong>required</strong>
+        </mat-error>
+      </mat-error>
+    </mat-form-field>
 
-    <div class="login-form-field__controls">
-      <button type="submit" mat-flat-button class="btn btn-login">Log in</button>
-      <button type="button" mat-flat-button class="btn btn-sign-up">Sign up</button>
+    <div class="sign-up-form-field__controls">
+      <button type="submit" mat-flat-button class="btn btn-sign-up">Sign up</button>
     </div>
   </form>
 </div>
