--- a/src/app/modules/authentication/components/login/login.component.html
+++ b/src/app/modules/authentication/components/login/login.component.html
@@ -1,35 +1,37 @@
-<div class="login-form-container">
-  <div class="login-form-info">
-    <p class="mat-title login-form__title">Log in</p>
-  </div>
-  <form [formGroup]="loginForm" class="login-form" (ngSubmit)="onSubmit()">
-    <mat-form-field class="login-form-field__name">
-      <input type="email" matInput placeholder="Email" formControlName="email">
-      <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
-        <mat-error *ngIf="email.hasError('required')">
-          Email is <strong>required</strong>
-        </mat-error>
-        <mat-error *ngIf="email.hasError('email')">
-          Email is <strong>not suitable</strong>
-        </mat-error>
-      </mat-error>
-    </mat-form-field>
-
-    <mat-form-field class="login-form-field__password">
-      <input [type]=typeOfInput matInput placeholder="Password" formControlName="password">
-      <mat-icon matSuffix (click)="handleVisibility()">{{prefixIcon}}</mat-icon>
-      <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
-        <mat-error *ngIf="password.hasError('required')">
-          Password is <strong>required</strong>
-        </mat-error>
-      </mat-error>
-    </mat-form-field>
-
-    <mat-checkbox class="login-form__checkbox">Remember me</mat-checkbox>
-
-    <div class="login-form-field__controls">
-      <button type="submit" mat-flat-button class="btn btn-login">Log in</button>
-      <button type="button" mat-flat-button class="btn btn-sign-up">Sign up</button>
+<div class="login-wrap">
+  <div class="login-form-container">
+    <div class="login-form-info">
+      <p class="mat-title login-form__title">Log in</p>
     </div>
-  </form>
+    <form [formGroup]="loginForm" class="login-form" (ngSubmit)="onSubmit()">
+      <mat-form-field class="login-form-field__name">
+        <input type="email" matInput placeholder="Email" formControlName="email">
+        <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
+          <mat-error *ngIf="email.hasError('required')">
+            Email is <strong>required</strong>
+          </mat-error>
+          <mat-error *ngIf="email.hasError('email')">
+            Email is <strong>not suitable</strong>
+          </mat-error>
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="login-form-field__password">
+        <input [type]=typeOfInput matInput placeholder="Password" formControlName="password">
+        <mat-icon matSuffix (click)="handleVisibility()">{{prefixIcon}}</mat-icon>
+        <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
+          <mat-error *ngIf="password.hasError('required')">
+            Password is <strong>required</strong>
+          </mat-error>
+        </mat-error>
+      </mat-form-field>
+
+      <mat-checkbox class="login-form__checkbox">Remember me</mat-checkbox>
+
+      <div class="login-form-field__controls">
+        <button type="submit" mat-flat-button class="btn btn-login">Log in</button>
+        <button type="button" routerLink="sing-up" mat-flat-button class="btn btn-sign-up">Sign up</button>
+      </div>
+    </form>
+  </div>
 </div>
