--- a/src/app/modules/authentication/components/login/login.component.scss
+++ b/src/app/modules/authentication/components/login/login.component.scss
@@ -1,55 +1,71 @@
 @import "_colors.scss";
 
-.login-form-container {
-  width: 300px;
-  min-width: 300px;
-  background-color: $default-background-color;
-  padding: 25px;
-  position: relative;
-  top: 250px;
-  left: 0;
-  margin: 0 auto;
+.login-wrap {
+  width: 100%;
+  height: 100vh;
+  background: $primary-background-color;
 
-  .mat-checkbox:not(.mat-checkbox-disabled).mat-accent .mat-checkbox-ripple .mat-ripple-element {
-    background-color: $form-primary-color;
-  }
+  .login-form-container {
+    width: 300px;
+    min-width: 300px;
+    background-color: $default-background-color;
+    padding: 25px;
+    position: relative;
+    top: 250px;
+    left: 0;
+    margin: 0 auto;
 
-  .mat-checkbox-checked.mat-accent .mat-checkbox-background {
-    background-color: $form-primary-color;
-  }
-
-  .login-form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-
-    .login-form-field__name, .login-form-field__password {
-      width:100%;
-      margin-bottom: 10px;
+    .mat-checkbox:not(.mat-checkbox-disabled).mat-accent .mat-checkbox-ripple .mat-ripple-element {
+      background-color: $form-primary-color;
     }
 
-    .login-form-field__controls {
-      width: 100%;
-      margin-top: 10px;
+    .mat-checkbox-checked.mat-accent .mat-checkbox-background {
+      background-color: $form-primary-color;
     }
 
-    .login-form__checkbox {
-      margin: 5px 0 10px;
-      font-size: 14px;
-    }
+    .login-form {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
 
-    .btn {
-      margin: 5px 0;
-      background-color: $primary-background-color;
-      color: $default-color;
-    }
+      .login-form-field__name, .login-form-field__password {
+        width: 100%;
+        margin-bottom: 10px;
+      }
 
-    .btn-login {
-      width: 100%;
-    }
+      .login-form-field__controls {
+        width: 100%;
+        margin-top: 10px;
+      }
 
-    .btn-sign-up {
-      width: 100%;
+      .login-form__checkbox {
+        margin: 5px 0 10px;
+        font-size: 14px;
+      }
+
+      .btn {
+        margin: 5px 0;
+        background-color: $primary-background-color;
+        color: $default-color;
+      }
+
+      .btn-login {
+        width: 100%;
+      }
+
+      .btn-sign-up {
+        width: 100%;
+        padding: 0;
+
+        .sign-up-link {
+          width: 100%;
+          display: block;
+          color: $default-color;
+          text-decoration: none;
+        }
+      }
     }
   }
 }
+
+
