--- a/src/app/modules/authentication/components/login/login.component.scss
+++ b/src/app/modules/authentication/components/login/login.component.scss
@@ -1,5 +1,13 @@
 @import "_colors.scss";
 
+.login-form__wrap {
+  width: 100%;
+  height: 100vh;
+  background: $primary-background-color;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   .login-form-container {
     width: 300px;
     min-width: 300px;
@@ -24,38 +32,31 @@
         margin-bottom: 10px;
       }
 
-      .login-form-field__controls {
-        width: 100%;
-        margin-top: 10px;
-      }
-
       .login-form__checkbox {
         margin: 5px 0 10px;
         font-size: 14px;
       }
 
-      .btn {
-        margin: 5px 0;
-        background-color: $primary-background-color;
-        color: $default-color;
-      }
-
-      .btn-login {
+      .login-form-field__controls {
         width: 100%;
-      }
+        margin-top: 10px;
 
-      .btn-sign-up {
-        width: 100%;
-        padding: 0;
-
-        .sign-up-link {
+        .btn-login {
           width: 100%;
-          display: block;
+          margin: 5px 0;
+          background-color: $primary-background-color;
           color: $default-color;
-          text-decoration: none;
+        }
+
+        .controls__sign-up {
+          text-align: center;
+          margin: 10px 0;
+
+          .controls__sign-up__title {
+            margin-right: 10px;
+          }
         }
       }
     }
   }
-
-
+}
