shared service created

--- a/src/app/modules/main/components/header/header.component.html
+++ b/src/app/modules/main/components/header/header.component.html
@@ -1,3 +1,8 @@
-<header class="header-container">
-  <app-weather-search></app-weather-search>
+<header class="header-container container-fluid">
+  <div class="logo-container">
+    <span class="logo">OpenWeatherMap API</span>
+  </div>
+  <div class="header-items">
+    <app-weather-search></app-weather-search>
+  </div>
 </header>
