--- a/src/app/modules/weather/components/weather-search/weather-search.component.scss
+++ b/src/app/modules/weather/components/weather-search/weather-search.component.scss
@@ -1,4 +1,15 @@
 .weather-search-container {
   width: 100%;
+  min-width: 400px;
 
+  .field-search {
+    width: 100%;
+
+    .i-search {
+      position: relative;
+      top: 6px;
+      margin-right: 5px;
+      cursor: pointer;
+    }
+  }
 }
