--- a/src/app/modules/weather/weather.component.html
+++ b/src/app/modules/weather/weather.component.html
@@ -1,4 +1,9 @@
-<app-weather-today></app-weather-today>
-<app-weather-forecast></app-weather-forecast>
+<div class="weather-container">
+  <app-weather-today [weatherTodayData]="weatherTodayData"></app-weather-today>
+  <app-weather-forecast></app-weather-forecast>
+</div>
+
+
+
 
 
