stable services sable requests sable components

--- a/src/app/modules/weather/components/weather-forecast/weather-forecast.component.html
+++ b/src/app/modules/weather/components/weather-forecast/weather-forecast.component.html
@@ -1,3 +1,18 @@
-<p>
-  weather-forecast works!
-</p>
+<div class="weather-forecast-container">
+  <mat-tab-group mat-stretch-tabs [selectedIndex]="1" class="tab-group" animationDuration="0ms">
+    <mat-tab class="tab-item" label="Wind">
+      Content 1
+    </mat-tab>
+    <mat-tab class="tab-item" label="Temperature">
+      Content 2
+    </mat-tab>
+    <mat-tab class="tab-item" label="Pressure">
+      Content 3
+    </mat-tab>
+    <mat-tab class="tab-item" label="Humidity">
+      Content 4
+    </mat-tab>
+  </mat-tab-group>
+</div>
+
+
