--- a/src/app/modules/weather/weather.component.html
+++ b/src/app/modules/weather/weather.component.html
@@ -1,6 +1,6 @@
 <div class="weather-container">
   <app-weather-today [weatherTodayData]="weatherTodayData"></app-weather-today>
-  <app-weather-forecast></app-weather-forecast>
+  <app-weather-forecast [forecastData]="forecastData"></app-weather-forecast>
 </div>
 
 
