--- a/src/app/modules/main/components/header/header.component.scss
+++ b/src/app/modules/main/components/header/header.component.scss
@@ -10,17 +10,17 @@
   flex-wrap: nowrap;
 
   .logo-container {
-    background-color: $primary-background-color;
     padding: 10px;
     width: 200px;
     min-width: 200px;
     text-align: center;
     border-radius: 3px;
+    border: 1px solid $primary-background-color;
 
     .logo {
       font-family: 'Helvetica', sans-serif;
-      font-weight: 400;
-      color: #FF7043;
+      font-weight: 600;
+      color: $primary-color;
     }
   }
 
