--- a/src/app/modules/weather/components/weather-search/weather-search.component.html
+++ b/src/app/modules/weather/components/weather-search/weather-search.component.html
@@ -3,7 +3,7 @@
     <mat-icon matPrefix class="i-search" (click)="onSearchButton(search.value)">search</mat-icon>
     <input type="text" matInput #search placeholder="Search"
            [ngModel]="search.value"
-           (keydown.enter)="onSearchInput($event)"
+           (keydown.enter)="onSearchKey($event)"
     >
     <mat-hint>You can find country by ID or city by name</mat-hint>
   </mat-form-field>
