--- a/src/app/modules/weather/components/weather-forecast/weather-forecast.component.html
+++ b/src/app/modules/weather/components/weather-forecast/weather-forecast.component.html
@@ -1,16 +1,16 @@
 <div class="weather-forecast-container">
   <mat-tab-group mat-stretch-tabs [selectedIndex]="1" class="tab-group" animationDuration="0ms">
     <mat-tab class="tab-item" label="Wind">
-      Content 1
+      <!--<canvas id="canvasForecast">{{chartForecast}}</canvas>-->
     </mat-tab>
     <mat-tab class="tab-item" label="Temperature">
-      Content 2
+      <canvas id="canvasTemp" height="75">{{chartForecast}}</canvas>
     </mat-tab>
     <mat-tab class="tab-item" label="Pressure">
-      Content 3
+      <!--<canvas id="canvasForecast">{{chartForecast}}</canvas>-->
     </mat-tab>
     <mat-tab class="tab-item" label="Humidity">
-      Content 4
+      <!--<canvas id="canvasForecast">{{chartForecast}}</canvas>-->
     </mat-tab>
   </mat-tab-group>
 </div>
