--- a/src/app/modules/main/main.component.scss
+++ b/src/app/modules/main/main.component.scss
@@ -2,6 +2,7 @@
 
 .main-container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   background: $primary-background-color;
 }
